<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true" >


            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="false"
                android:layout_marginTop="2dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vpn_name" />

                <EditText
                    android:id="@+id/vpn_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vpn_type" />

                <EditText
                    android:id="@+id/vpn_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vpn_server" />

                <EditText
                    android:id="@+id/vpn_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/vpn_mppe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vpn_mppe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vpn_username" />

                <EditText
                    android:id="@+id/vpn_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vpn_password" />

                <EditText
                    android:id="@+id/vpn_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vpn_auto_mode" />

                <Spinner
                    android:id="@+id/auto_mode_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

    </ScrollView>
</LinearLayout>
